# unhacs

./: .drone.star  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.gitea/workflows/: ci.yml  test.yml  upload.yml
docs/source/: conf.py  index.rst
tests/: main_test.py
unhacs/: git.py  main.py  packages.py
